# deepnado

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py  version.py
.github/workflows/: develop-branch-actions.yml  every-other-branch.yml  main-branch-after-merge-actions.yml  main-branch-pr-actions.yml
scripts/: README.md  plot_example.py
scripts/resources/test/2020/: NUL_200206_061410_KEOX_1083657n_C0.nc
src/deepnado/: deepnado.py  trainer.py
src/deepnado/common/: constants.py
src/deepnado/config/: cli_parser.py  config.py  example_train_config.json  file_parser.py
src/deepnado/data/: dataset.py  loader.py  preprocess.py  utils.py
src/deepnado/models/: baseline.py  coordconv.py
src/deepnado/models/baseline/: baseline.py  coordinates.py
src/deepnado/plotting/: legacy.py  plot.py
test/unit/: test_version.py
tests/unit/: test_dataloader.py  test_dataset.py  test_version.py
tests/unit/resources/: catalog.csv
tests/unit/resources/test/2020/: NUL_200206_062552_KEOX_1083657n_E2.nc  NUL_200206_063812_KEOX_1083657n_E4.nc  NUL_200206_070702_KEOX_1083657n_V1.nc
