
[build-system]
requires = ["setuptools>=61.0", "setuptools-scm", "pathlib"]
build-backend = "setuptools.build_meta"

[project]
name = "deepnado"
dynamic = ["dependencies", "version", "readme"]
description = "An enhanced Ai/Ml implementation inspired by the TorNet baseline model using PyTorch."
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "black",
    "coverage",
    "flake8",
    "pre-commit",
    "pytest"
]

[project.scripts]
deepnado = "deepnado.deepnado:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = {file = ["README.md"]}

[tool.black]
line-length=100
